--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="bottom_navigation_stats">통계</string>
     <string name="bottom_navigation_record">기록</string>
     <string name="bottom_navigation_challenge">챌린지</string>
+
+    <string name="tab_stats_my_stats">내 통계</string>
+    <string name="tab_stats_stadium_stats">오늘의 구단 통계</string>
 </resources>
