--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
     <string name="bottom_navigation_record">기록</string>
     <string name="bottom_navigation_challenge">챌린지</string>
 
-    <string name="tab_stats_my_stats">내 통계</string>
-    <string name="tab_stats_stadium_stats">오늘의 구장 통계</string>
+    <string name="stats_tab_my_stats">내 통계</string>
+    <string name="stats_tab_stadium_stats">오늘의 구장 통계</string>
 </resources>
