--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,11 +2,16 @@
     <string name="app_name">야구보구</string>
 
     <string name="all_settings">설정</string>
+    <string name="all_cancel">취소</string>
 
     <string name="bottom_navigation_home">홈</string>
     <string name="bottom_navigation_stats">통계</string>
     <string name="bottom_navigation_record">기록</string>
     <string name="bottom_navigation_challenge">챌린지</string>
+
+    <string name="permission_dialog_open_settings">"설정으로 이동"</string>
+    <string name="permission_dialog_location_title">위치 권한 필요</string>
+    <string name="permission_dialog_location_description">인증하려면 위치 권한이 필요합니다.\n설정에서 위치 권한을 허용해 주세요.</string>
 
     <string name="home_check_in">직관 인증하기</string>
     <string name="home_my_team">우리 팀</string>
@@ -14,6 +19,6 @@
     <string name="home_winning_percentage">승률</string>
     <string name="home_recent_attendance_record">최근 직관 기록</string>
     <string name="home_empty_attendance_record_description">직관 기록이 없습니다.\n직관의 추억을 기록해 주세요!</string>
-    <string name="home_location_permission_denied_message">인증하려면 위치 권한이 필요합니다.\n설정에서 위치 권한을 허용해 주세요.</string>
+    <string name="home_location_permission_denied_message">위치 권한이 거부되었습니다.</string>
     <string name="home_location_fetch_failed_message">위치를 불러오는 데 실패했습니다.</string>
 </resources>
