--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="home_empty_attendance_record_description">직관 기록이 없습니다.\n직관의 추억을 기록해 주세요!</string>
     <string name="home_location_permission_denied_message">위치 권한이 거부되었습니다.</string>
     <string name="home_location_fetch_failed_message">위치를 불러오는 데 실패했습니다.</string>
+    <string name="home_check_in_success_message">직관 인증이 완료되었습니다!</string>
+    <string name="home_check_in_failure_message">구장 근처에서만 인증할 수 있어요.</string>
 
     <string name="stats_tab_my_stats">내 통계</string>
     <string name="stats_tab_stadium_stats">오늘의 구장 통계</string>
