--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="stats_my_lucky_stadium">행운의 구장</string>
     <string name="stats_my_team_emoji">🏆</string>
     <string name="stats_my_lucky_stadium_emoji">🍀</string>
+    <string name="stats_my_no_lucky_stadium">없어요..</string>
 
     <string name="stats_stadium_pie_chart_title">%s 현황</string>
     <string name="stats_stadium_refresh_time">%02d:%02d 기준</string>
