--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
 
     <string name="bottom_navigation_home">홈</string>
     <string name="bottom_navigation_stats">통계</string>
-    <string name="bottom_navigation_record">기록</string>
+    <string name="bottom_navigation_chat">현장톡</string>
     <string name="bottom_navigation_challenge">챌린지</string>
 
     <string name="permission_dialog_open_settings">"설정으로 이동"</string>
@@ -18,8 +18,6 @@
     <string name="home_my_team">우리 팀</string>
     <string name="home_attendance_count">인증 횟수</string>
     <string name="home_winning_percentage">직관 승률</string>
-    <string name="home_recent_attendance_record">최근 직관 기록</string>
-    <string name="home_empty_attendance_record_description">직관 기록이 없습니다.\n직관의 추억을 기록해 주세요!</string>
     <string name="home_location_permission_denied_message">위치 권한이 거부되었습니다.</string>
     <string name="home_location_fetch_failed_message">위치를 불러오는 데 실패했습니다.</string>
     <string name="home_check_in_success_message">직관 인증이 완료되었습니다!</string>
@@ -28,7 +26,7 @@
     <string name="home_stadium_refresh_time">%02d:%02d 기준</string>
 
     <string name="stats_tab_my_stats">내 통계</string>
-    <string name="stats_tab_stadium_stats">오늘의 구장 통계</string>
+    <string name="stats_tab_attendance_history">직관 내역</string>
     <string name="stats_percentage">%d%%</string>
     <string name="stats_legend_percentage">%.1f%%</string>
 
@@ -42,4 +40,6 @@
     <string name="stats_my_team_emoji">🏆</string>
     <string name="stats_my_lucky_stadium_emoji">🍀</string>
     <string name="stats_my_no_lucky_stadium">없어요..</string>
+
+    <string name="stats_empty_attendance_history_description">직관 내역이 아직 없어요.</string>
 </resources>
