--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="home_check_in_failure_message">구장 근처에서만 인증할 수 있어요.</string>
     <string name="home_team_occupancy_title">오늘 팬 현황</string>
     <string name="home_team_occupancy_refresh_time">%02d:%02d 기준</string>
+    <string name="home_show_more">더보기</string>
+    <string name="home_show_less">접기</string>
 
     <string name="stats_tab_my_stats">내 통계</string>
     <string name="stats_tab_attendance_history">직관 내역</string>
