--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -3,7 +3,9 @@
 
     <string name="all_settings">설정</string>
     <string name="all_cancel">취소</string>
-    <string name="all_winning_percentage">%d%%</string>
+    <string name="all_rounded_win_rate">%d%%</string>
+    <string name="all_win_rate">%.1f%%</string>
+    <string name="all_fan">%s 팬</string>
 
     <string name="bottom_navigation_home">홈</string>
     <string name="bottom_navigation_stats">통계</string>
@@ -26,11 +28,10 @@
     <string name="home_team_occupancy_refresh_time">%02d:%02d 기준</string>
     <string name="home_show_more">더보기</string>
     <string name="home_show_less">접기</string>
+    <string name="home_victory_fairy_ranking">승리 요정 랭킹</string>
 
     <string name="stats_tab_my_stats">내 통계</string>
     <string name="stats_tab_attendance_history">직관 내역</string>
-    <string name="stats_percentage">%d%%</string>
-    <string name="stats_legend_percentage">%.1f%%</string>
 
     <string name="stats_my_pie_chart_title">직관 승률</string>
     <string name="stats_my_pie_chart_attendance_count">%d 경기</string>
