--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -14,6 +14,10 @@
     <string name="permission_dialog_location_title">위치 권한 필요</string>
     <string name="permission_dialog_location_description">인증하려면 위치 권한이 필요합니다.\n설정에서 위치 권한을 허용해 주세요.</string>
 
+    <string name="login_app_description">야구보구 인증하구 기록하구</string>
+    <string name="login_google_icon_description">구글 G 아이콘</string>
+    <string name="login_button_google_account">Google 계정으로 계속하기</string>
+
     <string name="home_check_in">직관 인증하기</string>
     <string name="home_my_team">우리 팀</string>
     <string name="home_attendance_count">인증 횟수</string>
