--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -38,11 +38,16 @@
     <string name="stats_my_pie_chart_win">승리</string>
     <string name="stats_my_pie_chart_draw">무승부</string>
     <string name="stats_my_pie_chart_lose">패배</string>
-    <string name="stats_my_team">최다 응원팀</string>
-    <string name="stats_my_lucky_stadium">행운의 구장</string>
     <string name="stats_my_team_emoji">🏆</string>
     <string name="stats_my_lucky_stadium_emoji">🍀</string>
+    <string name="stats_my_team">응원팀</string>
+    <string name="stats_my_lucky_stadium">행운의 구장</string>
     <string name="stats_my_no_lucky_stadium">없어요..</string>
+    <string name="stats_attendance_stats_title">직관 평균 통계</string>
+    <string name="stats_gain_score_emoji">😊</string>
+    <string name="stats_loss_score_emoji">😡</string>
+    <string name="stats_gain_score">득점</string>
+    <string name="stats_loss_score">실점</string>
 
     <string name="stats_empty_attendance_history_description">직관 내역이 아직 없어요.</string>
 </resources>
