feat: 응원하는 팀 UiModel 및 RecyclerView Item 구현

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="stats_my_team_emoji">🏆</string>
     <string name="stats_my_lucky_stadium_emoji">🍀</string>
     <string name="stats_my_no_lucky_stadium">없어요..</string>
-
     <string name="stats_empty_attendance_history_description">직관 내역이 아직 없어요.</string>
+
+    <string name="favorite_team_selection">응원하는 팀을\n선택해 주세요!</string>
 </resources>
