--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -43,4 +43,6 @@
 
     <string name="stats_stadium_pie_chart_title">%s 인증현황</string>
     <string name="stats_stadium_refresh_time">%02d:%02d 기준</string>
+
+    <string name="favorite_team_selection">응원하는 팀을\n선택해 주세요!</string>
 </resources>
