--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -51,4 +51,8 @@
 
     <string name="stats_attendance_history_title">최근 직관 내역</string>
     <string name="stats_empty_attendance_history_description">직관 내역이 아직 없어요.</string>
+    <string-array name="stats_attendance_history_filter">
+        <item name="all">전체 경기</item>
+        <item name="win">승리한 경기</item>
+    </string-array>
 </resources>
