refactor: 현장톡 채팅 전송 아이콘 이름 변경 및 입력창 최대 줄 수 제한

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -79,4 +79,5 @@
     <string name="livechat_time_days_ago">%d일 전</string>
     <string name="livechat_time_months_ago">%d개월 전</string>
     <string name="livechat_time_years_ago">%d년 전</string>
+    <string name="livetalk_send_btn_description">메시지 전송 버튼 비행기 아이콘</string>
 </resources>
