feat: 직관 인증 확인 다이얼로그 Fragment 구현

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="login_button_google_account">Google 계정으로 계속하기</string>
 
     <string name="home_check_in">직관 인증하기</string>
+    <string name="home_check_in_confirm">직관 인증 할까요?</string>
+    <string name="home_check_in_caution">직관 인증 경기는 매일 자정에 승률이 자동 반영돼요. 해당 경기에 응원팀이 없으면 인증 횟수만 집계돼요.</string>
     <string name="home_my_team">우리 팀</string>
     <string name="home_attendance_count">인증 횟수</string>
     <string name="home_winning_percentage">직관 승률</string>
@@ -78,7 +80,7 @@
     <string name="livetalk_away_home_name">%s vs %s</string>
     <string name="livetalk_chat_input_hint">현재 %s 상황은…</string>
     <string name="livetalk_return_stadiums_description">현장톡 구장목록으로 돌아가기 아이콘</string>
-    
+
     <string name="livetalk_trash_icon_description">삭제 쓰레기통 아이콘</string>
     <string name="livetalk_trash_btn">삭제</string>
     <string name="livetalk_user_report_icon_description">신고 깃발 아이콘</string>
