--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -22,8 +22,9 @@
     <string name="login_button_google_account">Google 계정으로 계속하기</string>
 
     <string name="home_check_in">직관 인증하기</string>
+    <string name="home_check_in_stadium_emoji">🏟️</string>
     <string name="home_check_in_confirm">직관 인증 할까요?</string>
-    <string name="home_check_in_caution">직관 인증 경기는 매일 자정에 승률이 자동 반영돼요. 해당 경기에 응원팀이 없으면 인증 횟수만 집계돼요.</string>
+    <string name="home_check_in_caution">직관 통계는 매일 자정에 자동 반영돼요.\n해당 경기에 응원팀이 없으면 인증 횟수에만 집계돼요.</string>
     <string name="home_my_team">우리 팀</string>
     <string name="home_attendance_count">인증 횟수</string>
     <string name="home_winning_percentage">직관 승률</string>
