--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -98,7 +98,9 @@
     <string name="Setting_delete_account_illustration_description">구단을 떠나는 선수 일러스트</string>
     <string name="setting_delete_account_question">정말 떠나실 건가요?</string>
     <string name="setting_delete_account_confirm">탈퇴하기</string>
+    <string name="setting_delete_account_confirm_select_alert">지금까지 야구보구를\n이용해주셔서 감사합니다.</string>
     <string name="setting_delete_account_cancel">잔류하기</string>
+    <string name="setting_delete_account_cancel_select_alert">앞으로도 잘 부탁드립니다!</string>
 
     <string name="setting_notice">공지사항</string>
     <string name="setting_contact_us">문의하기</string>
