--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -10,8 +10,8 @@
 
     <string name="bottom_navigation_home">홈</string>
     <string name="bottom_navigation_stats">통계</string>
+    <string name="bottom_navigation_attendance_history">직관 내역</string>
     <string name="bottom_navigation_livetalk">현장톡</string>
-    <string name="bottom_navigation_challenge">챌린지</string>
 
     <string name="permission_dialog_open_settings">"설정으로 이동"</string>
     <string name="permission_dialog_location_title">위치 권한 필요</string>
