--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -60,11 +60,20 @@
     <string name="stats_average_score">%.1f점</string>
     <string name="stats_average_count">%.1f개</string>
 
-    <string name="stats_empty_attendance_history_description">직관 내역이 아직 없어요.</string>
-    <string-array name="stats_attendance_history_filter">
+    <string name="attendance_history_empty_description">직관 내역이 아직 없어요.</string>
+    <string-array name="attendance_history_filter">
         <item name="all">전체 경기</item>
         <item name="win">승리한 경기</item>
     </string-array>
+    <string name="attendance_history_newest">최신순</string>
+    <string name="attendance_history_oldest">오래된순</string>
+    <string name="attendance_history_winning_pitcher">승 - %s</string>
+    <string name="attendance_history_losing_pitcher">패 - %s</string>
+    <string name="attendance_history_team_name">팀명</string>
+    <string name="attendance_history_team_record">팀 기록</string>
+    <string name="attendance_history_hit">안타</string>
+    <string name="attendance_history_error">실책</string>
+    <string name="attendance_history_ball">사사구</string>
 
     <string name="livetalk_user_icon_description">직관 인증 수 사람 아이콘</string>
     <string name="livetalk_stadium_select_arrow_description">현장톡 구장 선택 진입 아이콘</string>
