--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -60,6 +60,8 @@
     <string name="stats_average_score">%.1f점</string>
     <string name="stats_average_count">%.1f개</string>
     <string name="stats_vs_team_stats">%d승 %d무 %d패</string>
+    <string name="stats_vs_team_winning_percentage">VS 팀 승률</string>
+    <string name="stats_stadium_visit_count">구장 방문 횟수</string>
 
     <string name="stats_attendance_history_title">최근 직관 내역</string>
     <string name="stats_empty_attendance_history_description">직관 내역이 아직 없어요.</string>
