--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -61,7 +61,7 @@
     <string name="stats_average_count">%.1f개</string>
 
     <string name="stats_attendance_history_title">최근 직관 내역</string>
-    <string name="stats_empty_attendance_history_description">직관 내역이 아직 없어요</string>
+    <string name="stats_empty_attendance_history_description">직관 내역이 없어요</string>
     <string name="stats_empty_scoreboard_illustration_description">비어있는 스코어보드 일러스트</string>
     <string-array name="stats_attendance_history_filter">
         <item name="all">전체 경기</item>
