--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -96,7 +96,9 @@
     <string name="setting_logout_alert">로그아웃 되었습니다.</string>
     <string name="setting_delete_account">탈퇴하기</string>
     <string name="Setting_delete_account_illustration_description">구단을 떠나는 선수 일러스트</string>
-    <string name="setting_delete_account_question">정말 떠나실 건가요?</string>
+    <string name="setting_delete_account_question_title">정말 떠나실 건가요?</string>
+    <string name="setting_delete_account_question_message">계정을 삭제하면 더 이상 직관 기록을 볼 수 없어요.</string>
+    <string name="setting_remember_message">%s님,\n야구보구와 함께한 %d일을 소중히 기억할게요.</string>
     <string name="setting_delete_account_confirm">탈퇴하기</string>
     <string name="setting_delete_account_confirm_select_alert">지금까지 야구보구를\n이용해주셔서 감사합니다.</string>
     <string name="setting_delete_account_cancel">잔류하기</string>
