--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -29,9 +29,11 @@
     <string name="home_attendance_count">인증 횟수</string>
     <string name="home_winning_percentage">직관 승률</string>
     <string name="home_location_permission_denied_message">위치 권한이 거부되었습니다.</string>
-    <string name="home_location_fetch_failed_message">위치를 불러오는 데 실패했습니다.</string>
+    <string name="home_check_in_location_fetch_failed_message">위치를 불러오는 데 실패했습니다.</string>
     <string name="home_check_in_success_message">직관 인증이 완료되었습니다!</string>
-    <string name="home_check_in_failure_message">구장 근처에서만 인증할 수 있어요.</string>
+    <string name="home_check_in_out_of_range_message">구장 근처에서만 인증할 수 있어요.</string>
+    <string name="home_check_in_network_failed_message">네트워크 오류로 인증에 실패했습니다. 잠시 후 다시 시도해주세요.</string>
+
     <string name="home_stadium_stats_title">오늘 팬 현황</string>
     <string name="home_stadium_stats_refresh_time">%02d:%02d 기준</string>
     <string name="home_show_more">더보기</string>
