--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -93,4 +93,6 @@
     <string name="livetalk_trash_btn">삭제</string>
     <string name="livetalk_user_report_icon_description">신고 깃발 아이콘</string>
     <string name="livetalk_user_report_btn">신고</string>
+    <string name="livetalk_already_reported">이미 신고한 현장톡입니다.</string>
+    <string name="livetalk_report_succeed">정상 신고 되었습니다.</string>
 </resources>
