fix: 사쿠란보 삭제

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -118,7 +118,7 @@
     <string name="setting_manage_account">계정 관리</string>
     <string name="setting_logout">로그아웃</string>
     <string name="setting_logout_dialog_message">정말 로그아웃 하시겠습니까?</string>
-    <string name="setting_logout_alert">로그아웃 되었아아 아이시아습니다.</string>
+    <string name="setting_logout_alert">로그아웃 되었습니다.</string>
     <string name="setting_delete_account">탈퇴하기</string>
     <string name="Setting_delete_account_illustration_description">구단을 떠나는 선수 일러스트</string>
     <string name="setting_delete_account_question_title">정말 떠나실 건가요?</string>
