--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -116,7 +116,7 @@
     <string name="livetalk_report_succeed">정상 신고 되었습니다.</string>
 
     <string name="setting_main_title">설정</string>
-    <string name="setting_main_join_date">가입한 날 : %s</string>
+    <string name="setting_main_sign_up_date">가입한 날 : %s</string>
     <string name="setting_icon_description">설정 아이콘</string>
     <string name="setting_edit_nickname">닉네임 수정</string>
     <string name="setting_edit_nickname_dialog_hint">새 닉네임을 입력해 주세요</string>
