--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="home_attendance_count">인증 횟수</string>
     <string name="home_winning_percentage">직관 승률</string>
     <string name="home_location_permission_denied_message">위치 권한이 거부되었습니다.</string>
+    <string name="home_location_settings_disabled">디바이스 위치 설정이 비활성화 상태입니다.</string>
     <string name="home_check_in_location_fetch_failed_message">위치를 불러오는 데 실패했습니다.</string>
     <string name="home_check_in_success_message">%s 인증이 완료되었습니다!</string>
     <string name="home_check_in_out_of_range_message">구장 근처에서만 인증할 수 있어요.</string>
