--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -47,13 +47,13 @@
     <string name="home_show_less">접기</string>
     <string name="home_victory_fairy_ranking">승리요정 랭킹</string>
     <string name="home_victory_fairy_my_nickname">나 (%s)</string>
-    <string name="home_victory_fairy_tooltip">직관 승률이 높은 순위예요. 일정 경기 이상 직관해야 등록돼요.</string>
+    <string name="home_victory_fairy_tooltip">직관 승률이 높은 팬들의 순위예요.</string>
 
     <string name="stats_tab_my_stats">내 통계</string>
     <string name="stats_tab_stats_detail">상세 통계</string>
 
     <string name="stats_my_pie_chart_title">직관 승률</string>
-    <string name="stats_my_pie_chart_tooltip">내 응원팀 직관 경기들의 승률이에요.</string>
+    <string name="stats_my_pie_chart_tooltip">응원팀 경기를 직관했을 때의 승률이에요.</string>
     <string name="stats_my_pie_chart_attendance_count">%d 경기</string>
     <string name="stats_my_pie_chart_win">승리</string>
     <string name="stats_my_pie_chart_draw">무승부</string>
