--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="login_app_description">야구보구 인증하구 통계보구</string>
     <string name="login_google_icon_description">구글 G 아이콘</string>
     <string name="login_button_google_account">Google 계정으로 계속하기</string>
+    <string name="login_should_immediate_update_message">앱을 계속 사용하려면\n최신 버전으로 업데이트 해주세요</string>
+    <string name="login_complete_update_message">업데이트 중이에요! ⚾</string>
 
     <string name="home_check_in">직관 인증하기</string>
     <string name="home_already_checked_in">오늘 인증했어요!</string>
