--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -127,6 +127,7 @@
     <string name="livetalk_loading_error">현장톡을 불러오는 데 실패했습니다.</string>
 
     <string name="badge_title">배지</string>
+    <string name="badge_image_description">배지 이미지</string>
 
     <string name="setting_main_title">설정</string>
     <string name="setting_main_sign_up_date">가입한 날 : %s</string>
