--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -128,6 +128,7 @@
 
     <string name="badge_title">배지</string>
     <string name="badge_image_description">배지 이미지</string>
+    <string name="badge_main_badge_title">대표 배지</string>
 
     <string name="setting_main_title">설정</string>
     <string name="setting_main_sign_up_date">가입한 날 : %s</string>
