--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -131,6 +131,9 @@
     <string name="badge_main_badge_title">대표 배지</string>
     <string name="badge_empty_badge_message">대표 배지를 선택해 주세요</string>
     <string name="badge_list_title">배지 목록</string>
+    <string name="badge_register_main_badge">대표 배지로 사용하기</string>
+    <string name="badge_achieved_rate_message">%의 사용자가 획득했어요</string>
+    <string name="badge_achieved_date">획득한 날: %s</string>
 
     <string name="setting_main_title">설정</string>
     <string name="setting_main_sign_up_date">가입한 날 : %s</string>
