--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -143,6 +143,7 @@
     <string name="setting_edit_nickname">닉네임 수정</string>
     <string name="setting_edit_nickname_dialog_hint">새 닉네임을 입력해 주세요</string>
     <string name="setting_edited_nickname_alert">닉네임이 \'%1$s\'(으)로 변경되었습니다.</string>
+    <string name="setting_edit_my_team">응원팀 수정</string>
 
     <string name="setting_manage_account">계정 관리</string>
     <string name="setting_logout">로그아웃</string>
