--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -125,6 +125,7 @@
     <string name="livetalk_already_reported">이미 신고한 현장톡입니다.</string>
     <string name="livetalk_report_succeed">정상 신고 되었습니다.</string>
     <string name="livetalk_loading_error">현장톡을 불러오는 데 실패했습니다.</string>
+    <string name="livetalk_like_count_message">실시간 %s %,d회 응원중!</string>
 
     <string name="badge_icon_description">배지 아이콘</string>
     <string name="badge_title">배지</string>
