--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -141,6 +141,8 @@
     <string name="setting_main_sign_up_date">가입한 날 : %s</string>
     <string name="setting_icon_description">설정 아이콘</string>
     <string name="setting_edit_profile_image">프로필 사진 수정</string>
+    <string name="setting_edit_profile_image_crop_failed">이미지 자르기에 실패했습니다. 다른 이미지를 선택해보세요</string>
+    <string name="setting_edit_profile_image_processing_failed">이미지 처리에 실패했습니다. 다른 이미지를 선택해보세요</string>
     <string name="setting_edit_nickname">닉네임 수정</string>
     <string name="setting_edit_nickname_dialog_hint">새 닉네임을 입력해 주세요</string>
     <string name="setting_edited_nickname_alert">닉네임이 \'%1$s\'(으)로 변경되었습니다.</string>
