--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -100,6 +100,8 @@
     <string name="attendance_history_errors">실책</string>
     <string name="attendance_history_balls">사사구</string>
 
+    <string name="past_check_in_title">과거 직관 기록</string>
+
     <string name="login_failed_message">로그인에 실패했습니다.</string>
 
     <string name="favorite_team_selection">응원하는 팀을\n선택해 주세요!</string>
