--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="home_already_checked_in_emoji">🚨</string>
     <string name="home_additional_check_in_message">추가로 직관 인증 할까요?</string>
     <string name="home_check_in_stadium_emoji">🏟️</string>
-    <string name="home_check_in_confirm">직관 인증 할까요?</string>
+    <string name="home_check_in_confirm">%s에서 인증 할까요?</string>
     <string name="home_check_in_caution">직관 통계는 매일 자정에 자동 반영돼요.\n응원팀 경기가 아니면 인증 횟수에만 집계돼요.</string>
     <string name="home_my_team">우리 팀</string>
     <string name="home_attendance_count">인증 횟수</string>
@@ -42,6 +42,7 @@
     <string name="home_location_settings_disabled">디바이스 위치 설정이 비활성화 상태입니다.</string>
     <string name="home_check_in_location_fetch_failed_message">위치를 불러오는 데 실패했습니다.</string>
     <string name="home_check_in_success_message">%s 인증이 완료되었습니다!</string>
+    <string name="home_check_in_no_game_message">오늘은 경기가 없어요.</string>
     <string name="home_check_in_out_of_range_message">구장 근처에서만 인증할 수 있어요.</string>
     <string name="home_check_in_network_failed_message">네트워크 오류로 인증에 실패했습니다.\n잠시 후 다시 시도해주세요.</string>
 
