--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="login_complete_update_message">업데이트 중이에요! ⚾</string>
 
     <string name="home_check_in">직관 인증하기</string>
-    <string name="home_already_checked_in">오늘 이미 인증했어요!</string>
+    <string name="home_already_checked_in_message">오늘 이미 인증했어요!</string>
     <string name="home_already_checked_in_emoji">🚨</string>
     <string name="home_additional_check_in_message">추가로 직관 인증을 할까요?</string>
     <string name="home_check_in_stadium_emoji">🏟️</string>
