refactor: 이모지 string resource 추출

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -194,5 +194,7 @@
     <string name="profile_latest_check_in_date">최근 직관일</string>
     <string name="profile_image_url_content_description">프로필 이미지</string>
     <string name="profile_representative_badge_content_description">대표 배지 이미지</string>
+    <string name="profile_victory_fairy_ranking_emoji">🎖️</string>
+    <string name="profile_victory_fairy_score_emoji">🧚</string>
 
 </resources>
