--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -76,7 +76,7 @@
     <string name="stats_my_team">응원팀</string>
     <string name="stats_my_lucky_stadium">행운의 구장</string>
     <string name="stats_my_lucky_stadium_tooltip">직관 승률이 제일 높은 구장이에요.</string>
-    <string name="stats_my_no_lucky_stadium">없어요..</string>
+    <string name="stats_no_data">없어요..</string>
     <string name="stats_attendance_stats_title">직관 평균 통계</string>
     <string name="stats_gain_score_emoji">😊</string>
     <string name="stats_loss_score_emoji">😡</string>
