--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -132,6 +132,7 @@
     <string name="livetalk_user_report_icon_description">신고 깃발 아이콘</string>
     <string name="livetalk_user_report_btn">신고</string>
     <string name="livetalk_user_report_dialog_message">정말 %1$s님의 현장톡을 신고할까요?</string>
+    <string name="livetalk_reported_chat_message">신고가 접수된 현장톡입니다.</string>
     <string name="livetalk_already_reported">이미 신고한 현장톡입니다.</string>
     <string name="livetalk_report_succeed">정상 신고 되었습니다.</string>
     <string name="livetalk_loading_error">현장톡을 불러오는 데 실패했습니다.</string>
