feat: 과거 직관 내역 추가 시 확인 다이얼로그 구현

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -98,6 +98,8 @@
     <string name="attendance_history_year_month">%d년 %d월</string>
     <string name="attendance_history_add_attendance">직관 내역 추가하기</string>
     <string name="attendance_history_add_attendance_description">직관 내역에 추가할 경기를 선택해 주세요</string>
+    <string name="attendance_history_add_attendance_confirm">%s\n직관 내역에 추가할까요?</string>
+    <string name="attendance_history_add_attendance_message">추가된 직관 내역은 삭제할 수 없어요.</string>
     <string name="attendance_history_check_in_success_message">직관 내역이 추가되었습니다!</string>
     <string name="attendance_history_no_game_description">경기가 없는 날이에요</string>
     <string name="attendance_history_empty_description">직관 내역이 없어요</string>
